fix(all): fix scrollbar displaying issue and add missing modules

--- a/src/app/list/movie-list/movie-list-show/movie-list-show.component.scss
+++ b/src/app/list/movie-list/movie-list-show/movie-list-show.component.scss
@@ -34,7 +34,7 @@
     background-size: 1096px 950px;
 
     .movie__list {
-        overflow: scroll;
+        overflow: auto;
         overflow-x: hidden;
         height: 780px;
         margin-top: 50px;
